--- a/module/shop/view/shop.html
+++ b/module/shop/view/shop.html
@@ -25,6 +25,17 @@
         position: absolute;
         margin-top: -25px;
     }
+    
+    .no-heart {
+        content: url("view/img/heart.png");
+        color: rgb(66, 66, 66);
+        background-color: white;
+        border-radius: 8px;
+        width: 25px;
+        height: 25px;
+        position: absolute;
+        margin-top: -25px;
+    }
 </style>
 
 <body style="background-color:#7a7a7a;">
